# tree-sitter-lilypond

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  ruff.toml  setup.py  tree-sitter.json  update_builtins.py
.github/: dependabot.yml  sync.yml
.github/workflows/: ci.yml  release.yml  stale.yml  sync.yml
bindings/c/: tree-sitter-lilypond.pc.in  tree-sitter-lilypond_scheme.h  tree-sitter-lilypond_scheme.pc.in
bindings/go/: binding.go  binding_test.go  go.mod  lilypond-scheme.go  lilypond.go
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js  lilypond-scheme.js  lilypond.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lilypond/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLilyPondTests/: TreeSitterLilyPondTests.swift
bindings/swift/TreeSitterLilypondTests/: TreeSitterLilypondTests.swift
bindings/swift/lilypond/TreeSitterLilypond/: lilypond.h
common/: common.mak
lilypond/: CMakeLists.txt  Makefile  grammar.js  rules.js
lilypond-scheme/: CMakeLists.txt  Makefile  grammar.js  rules.js
lilypond-scheme/src/: grammar.json  node-types.json  parser.c
lilypond/src/: grammar.json  node-types.json  parser.c
queries/: highlights-builtins.scm  highlights-scheme-builtins.scm  highlights-scheme-lilypond-builtins.scm  highlights-scheme.scm  highlights.scm  update_builtins.py
src/: grammar.json  node-types.json  parser.c
test/corpus/: LilyPond Tokens.txt  Scheme Literals.txt  Scheme Numbers.txt  Tokens.txt
test/highlight/: highlight.ly
