[package]
name = "tree-sitter-lilypond"
description = "LilyPond grammar for the tree-sitter parsing library"
version = "0.0.1"
authors = ["Nathan Whetsell <nathan.whetsell@gmail.com>"]
keywords = ["incremental", "parsing", "lilypond"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/nwhetsell/tree-sitter-lilypond"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0"
